--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <button class="nav-btn next-btn" onclick="moveSlide(1)">&#10095;</button>
         </div>
 
-        <button class="magic-btn" onclick="goToStage3()" style="margin-bottom: 50px;">Unlock My Heart 💖</button>
+        <button class="magic-btn" onclick="goToStage3()" style="margin-bottom: 50px;">Unlock Your Gift 💖</button>
     </div>
 
     <div id="stage-reasons" class="hidden">
