Update birthday message and title for Prachi

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         .time-box span { font-size: 1.8rem; font-weight: bold; color: var(--accent); display: block; }
         .time-box small { font-size: 0.8rem; text-transform: uppercase; letter-spacing: 1px; }
 
-        /* Floating Happy Birthday Text */
+        /* Floating Happy Birthday Prachi Prachi Text */
         #hb-message-container { margin-top: 20px; min-height: 60px; }
         .floating-hb {
             font-family: 'Dancing Script', cursive; font-size: 3rem; color: #fff;
@@ -255,7 +255,7 @@
         <div id="heart-container"></div>
 
         <div class="container">
-            <h1 style="color:white; font-family:'Dancing Script'; font-size: 3rem;">Road to 25</h1>
+            <h1 style="color:white; font-family:'Dancing Script'; font-size: 3rem;">Road to 25 My Princess</h1>
             
             <div id="timer-container" class="countdown-grid">
                 <div class="time-box"><span id="d">0</span><small>Days</small></div>
@@ -306,7 +306,7 @@
     </div>
 
     <div id="stage-final" class="hidden">
-        <h1>Happy Birthday 👸🎈</h1>
+        <h1>Happy Birthday Prachi Prachi 👸🎈</h1>
         <p style="color:gray; font-size:1.5rem; text-shadow: 1px 1px 2px rgba(0,0,0,0.2); z-index:2; margin-bottom: 20px;">You are the most amazing baddie. Just Click the Cake!!</p>
         <br>
         <br>
