Fix duplicate name in birthday message

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     </div>
 
     <div id="stage-final" class="hidden">
-        <h1>Happy Birthday Prachi Prachi 👸🎈</h1>
+        <h1>Happy Birthday Prachi 👸🎈</h1>
         <p style="color:gray; font-size:1.5rem; text-shadow: 1px 1px 2px rgba(0,0,0,0.2); z-index:2; margin-bottom: 20px;">You are the most amazing baddie. Just Click the Cake!!</p>
         <br>
         <br>
