Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -283,12 +283,12 @@
         <div class="carousel-outer">
             <button class="nav-btn prev-btn" onclick="moveSlide(-1)">&#10094;</button>
             <div class="carousel-track" id="track">
-                <div class="carousel-item"><img src="Images/IMG_4707.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
-                <div class="carousel-item"><img src="Images/IMG_6125.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
-                <div class="carousel-item"><img src="Images/IMG_6174.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
-                <div class="carousel-item"><img src="Images/IMG_6208.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
-                <div class="carousel-item"><img src="Images/IMG_6230.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
-                <div class="carousel-item"><img src="Images/IMG_6252.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
+                <div class="carousel-item"><img src="Images/044188f9-7209-45fe-81db-71ad5cb5ac78.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
+                <div class="carousel-item"><img src="Images/07e52467-b39c-48bd-ab5d-7f5d1a1fa214.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
+                <div class="carousel-item"><img src="Images/2f07abbd-3c97-40cc-9ef2-c711cb319ca4.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
+                <div class="carousel-item"><img src="Images/387dc57f-e631-4972-8a7a-0db0b16d0345.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
+                <div class="carousel-item"><img src="Images/6325b2b6-f771-43c3-8c36-fd6ebd278880.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
+                <div class="carousel-item"><img src="Images/7db2b244-f7e8-4bcf-9e8d-d90177c320ca.jpeg" alt="Memory" onerror="this.src='https://via.placeholder.com/300x400?text=Add+Image'"></div>
             </div>
             <button class="nav-btn next-btn" onclick="moveSlide(1)">&#10095;</button>
         </div>
@@ -318,9 +318,9 @@
             <div class="cake"></div>
         </div>
 
-        <img src="https://picsum.photos/300/400?random=10" class="floating-photo" style="top:15%; left:10%;">
-        <img src="https://picsum.photos/300/400?random=11" class="floating-photo" style="top:25%; right:10%;">
-        <img src="https://picsum.photos/300/400?random=12" class="floating-photo" style="bottom:15%; left:15%;">
+        <img src="Images/c443a334-5478-4cbb-8740-63a6411c5183.jpeg" class="floating-photo" style="top:15%; left:10%;">
+        <img src="Images/d01daf9b-c7b7-4c2e-ab14-475af08bdbfa.jpeg1" class="floating-photo" style="top:25%; right:10%;">
+        <img src="Images/d225ee7f-ec7f-4d7f-9fee-7e6404c0915f.jpeg" class="floating-photo" style="bottom:15%; left:15%;">
         
         <div id="balloon-container"></div>
     </div>
