--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </div>
 
         <img src="Images/c443a334-5478-4cbb-8740-63a6411c5183.jpeg" class="floating-photo" style="top:15%; left:10%;">
-        <img src="Images/d01daf9b-c7b7-4c2e-ab14-475af08bdbfa.jpeg1" class="floating-photo" style="top:25%; right:10%;">
+        <img src="Images/d01daf9b-c7b7-4c2e-ab14-475af08bdbfa.jpeg" class="floating-photo" style="top:25%; right:10%;">
         <img src="Images/d225ee7f-ec7f-4d7f-9fee-7e6404c0915f.jpeg" class="floating-photo" style="bottom:15%; left:15%;">
         
         <div id="balloon-container"></div>
